--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<div class=" container">
+
+		<img src=" https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
+
+		<div class="text-container">
+
+			<h2>Welocome to my Pinterest clone</h2>
+			<p>Discoverr new inspration and save your Exclusive ideas</p>
+			<button  class="btn" type="submit">Explore now</button>
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
