--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 		<div class="text-container">
 
 			<h2>Welocome to my Pinterest clone</h2>
-			<p>Discoverr new inspration and save your Exclusive ideas</p>
+			<p>Discover new inspration and save your Exclusive ideas</p>
 			<button  class="btn" type="submit">Explore now</button>
 		</div>
 	</div>
